--- a/ecommerce/Views/user/userlogin.cshtml
+++ b/ecommerce/Views/user/userlogin.cshtml
@@ -53,7 +53,7 @@
             <div class="insidebox">
                 <div> <h1>Log In(User)</h1></div>
 
-
+@*commit*@
 
 
                 <div class="form-group">
