--- a/ecommerce/Views/Home/Index.cshtml
+++ b/ecommerce/Views/Home/Index.cshtml
@@ -2,30 +2,46 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+<!DOCTYPE html>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>view category</title>
+    <link href="~/Content/pagination.css" rel="stylesheet" />
+    <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/Content/bootstrap.css" rel="stylesheet" />
+</head>
+<body>
+    <div class="container" style="height:1150px;">
+        <div class="row">
+            <div class="col-lg-12" style="height:100px; border:1px solid solid;">
+                <img src="" class="img img-responsive" style="width:100%; height:100%" />
+            </div>
+        </div>
+
+        <div class="row" style="margin-bottom:40px">
+            <div class="col-lg-2 col-md-2">
+                <img src="" class="img img-responsive" style="width:100%; height:100%" />
+            </div>
+
+            <div class="col-lg-8 col-md-8">
+                <div class="row">
+                    @if (Model != null)
+                    {
+                        foreach (var item in Model)
+                        {
+                            <div class="img img-responsive" src="@Url.Content(item.cat_image)" style="width:100%; height:100%" />
+                            <h4 style="color:#808080; font-family:'Arial Rounded MT'; text-align:center">@Html.ActionLink("item.cat_name", "_LayoutPage1", "user", new { id = item.cat_id }, null)</h4>
+                        }
+                    }
+                </div>
+            </div>
+
+            <div class="col-lg-2 col-md-2">
+                <img src="" class="img img-responsive" style="width:100%; height:100%" />
+            </div>
+        </div>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+</body>
+</html>
